tests/NormalTests/paczka1/fuzzy1/20512848.err
Error in line 5: G1FrKS S731 23,9
Error in line 28: 2k7J1ss73 A26 31,7
Error in line 33: G1FrKS S731 12,0
Error in line 32: emTvAcStrOO S969 61,5
